Fix table overflow

--- a/css/tableOverflow.css
+++ b/css/tableOverflow.css
@@ -1,4 +1,4 @@
 .coursesplus-tableOverflowContainer {
-	width: 100%;
+	width: 500px;
 	overflow: auto;
 }
